--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -32111,6 +32111,25 @@
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
+	<key>NSScrollViewShouldScrollUnderTitlebar</key>
+	<false/>
+	<key>NSTableView Columns KeyBingingTable</key>
+	<array>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATCG
+		</data>
+		<string>198</string>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATGG
+		</data>
+		<string>307</string>
+	</array>
+	<key>NSTableView Hidden Columns KeyBingingTable</key>
+	<array/>
+	<key>NSTableView Sort Ordering KeyBingingTable</key>
+	<array/>
 	<key>NSToolbar Configuration Terminal Toolbar</key>
 	<dict>
 		<key>TB Display Mode</key>
@@ -32130,17 +32149,19 @@
 	<key>NSWindow Frame NSColorPanel</key>
 	<string>1057 351 228 309 0 0 1680 1027 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>402 297 699 698 0 0 2560 1417 </string>
+	<string>452 179 699 564 0 0 1440 877 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>358 806 924 485 0 0 2560 1417 </string>
+	<string>358 421 606 456 0 0 1440 877 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>1088 967 384 129 0 0 2560 1417 </string>
+	<string>-912 561 384 129 -1440 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 14 1279 1403 0 0 2560 1417 </string>
+	<string>36 32 1279 838 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 18 719 859 0 0 1440 877 </string>
+	<string>0 873 586 403 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>0 26 1440 852 0 0 1440 878 </string>
+	<key>NeverWarnAboutShortLivedSessions_B2C2FAF0-1029-493D-A7D7-31A8565F2910</key>
+	<true/>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -34330,8 +34351,10 @@
 			<false/>
 			<key>Use Italic Font</key>
 			<false/>
+			<key>Use Non-ASCII Font</key>
+			<false/>
 			<key>Vertical Spacing</key>
-			<real>1.1000000238418579</real>
+			<real>1.0247258565512047</real>
 			<key>Visual Bell</key>
 			<false/>
 			<key>Window Type</key>
@@ -34340,12 +34363,24 @@
 			<string>/Users/cpaul</string>
 		</dict>
 	</array>
+	<key>NoSyncDoNotWarnBeforeMultilinePaste</key>
+	<true/>
+	<key>NoSyncDoNotWarnBeforeMultilinePaste_selection</key>
+	<integer>0</integer>
 	<key>NoSyncHaveShownPromoWithId_4</key>
 	<true/>
+	<key>NoSyncInstallationId</key>
+	<string>F0CA8987-1D3C-44F1-A7ED-06A9057A3343</string>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
+	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
+	<real>486498351.53543502</real>
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>478062516.59012902</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>483294327.44465798</real>
+	<real>486494513.40039498</real>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -34392,7 +34427,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/cpaul/dotfiles/iterm2</string>
+	<string>/Users/cpaul/.dotfiles/iterm2</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -34407,12 +34442,14 @@
 	<true/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
+	<key>SUFeedAlternateAppNameKey</key>
+	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/testing.xml</string>
+	<string>https://iterm2.com/appcasts/testing.xml?shard=60</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-04-25T16:25:26Z</date>
+	<date>2016-06-01T18:25:29Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -34454,7 +34491,7 @@
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>.Helvetica Neue DeskInterface</string>
+	<string>.AppleSystemUIFont</string>
 	<key>Window Arrangements</key>
 	<dict/>
 	<key>WindowNumber</key>
@@ -34468,6 +34505,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.1.4</string>
+	<string>3.0.0</string>
 </dict>
 </plist>
